--- a/2019-2020.html
+++ b/2019-2020.html
@@ -20,6 +20,8 @@
             </div>
         </div>
 
+        <a href = "index.html"><img src = "outline_arrow_back_white_24dp.png"></a>
+
         <div title="Monta Smonta" class = "glitch"><a href = "MontaSmonta.html">Monta Smonta</a></div>
         <div title="Sicurezza" class = "glitch2"><a href = "Sicurezza.html">Sicurezza</a></div>
         
