--- a/CNA.html
+++ b/CNA.html
@@ -18,7 +18,7 @@
 
         <div class="css-typing">
             <p>
-              Webinar volto ad illustrare agli studenti vari percorsi da intraprendere
+              Webinar in cui la CNA ha illustrato agli studenti vari percorsi da intraprendere
             </p>
             <p>
               post-diploma. L'attività è durata 5 ore, durante le quali abbiamo assistito
